# windowManager

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.cache/clangd/index/: wndman.c.3E187126F9DC4188.idx  wndman.h.85CFAC7BF2B13F8E.idx
include/: wndman.h
log/2025/02/: 26.md
log/2025/03/: 01.md
src/: test.c  wndman.c
